[tool.poetry]
name = "touchprice"
version = "0.0.3"
description = "shioaji touchprice extentions"
authors = ["Sally <nipolikae@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "2.22.0"
shioaji = "^0.2.0-dev.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-mock = "^3.0.0"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
