[tool.poetry]
name = "touchprice"
version = "0.0.0"
description = "shioaji touchprice extentions"
authors = ["Sally <nipolikae@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "2.22.0"
shioaji = "^0.2.1-dev.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-mock = "^3.0.0"
pytest-cov = "^2.8.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
format = "v{base}"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
